--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ vertical-align: middle;
 <body>
 <h1 id="laplacian-smoothing-tools-for-modo-plug-in">Laplacian Smoothing
 tools for Modo plug-in</h1>
-<p>This a Modo Plug-in kit to smooth mesh vertex positions using
+<p>This is a Modo Plug-in kit to smooth mesh vertex positions using
 Laplacian algorithm based on a curvature flow Laplace Beltrami operator
 in a diffusion equation. This allows you to reduce noise on a mesh’s
 surface with minimal changes to its shape.</p>
